--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-content-loader": "^7.0.0",
